--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
  body {
     background-color: #f2f2f2;
-    font-family: "Lato";
+    font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-size: 16px;
     color: #555;
@@ -14,7 +14,7 @@
  }
 
  h1,h2.h3,h4,h5,h6 {
-    font-family: "Raleway";
+   font-family: 'Raleway', sans-serif;
     font-weight: 300;
     color: #333;
  }
@@ -24,13 +24,10 @@
     margin-bottom: 25px;
  }
 
- .centered {
-    text-align: center;
- }
+.section-two i {
+   font-size: 30px;
+}
 
-a {
-    color: #f85c37;
- }
 
  /* при наведении, при фокусировке */
  a:hover, a:focus {
@@ -71,15 +68,7 @@ a {
 background-color: #e4d83b;
 color: #2d2d2d;
  }
-
- .nav-icon {
-   color: #f85c37;
- }
-
- .navbar-toggler-icon {
-   color: #f85c37;
- }
-
+ 
  .headerwrap {
    background: url(img/DSC05736.jpg) no-repeat center top;
    margin-top: -10px;
@@ -119,20 +108,27 @@ color: #2d2d2d;
  .w {
    margin-top: 50px;
  }
-
- /* .w h4 {
-   font-size: 40px;
- } */
-
  .section-three{
    background-color: silver;
  }
 
- /* .z h4 {
-   font-size: 40px;
- } */
-
- .tolt {
-   align-items: center;
-   justify-content: center;
+ .tilt {
+   -webkit-transition: all 0.5s ease;
+   -moz-transition: all 0.5s ease;
+   -o-transition: all 0.5s ease;
+   -ms-transition: all 0.5s ease;
+   transition: all 0.5s ease;
  }
+
+ .tilt:hover {
+   -webkit-transition: rotate(-10deg);
+   -moz-transition: rotate(-10deg);
+   -o-transition: rotate(-10deg);
+   -ms-transition: rotate(-10deg);
+   transition: rotate(-10deg);
+ }
+
+ .section-five {
+   background-color: silver;
+ }
+
